--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
+# Gerneral Jekyll config:
+highlighter: rouge
 name: Mads Mikkel
 markdown: kramdown
-highlighter: rouge
 permalink: /blog/:year/:month/:day/:title
