--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 # Gerneral Jekyll config:
-highlighter: rouge
 name: Mads Mikkel
-markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
