--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 name: Mads Mikkel
 permalink: /blog/:year/:month/:day/:title
 markdown: kramdown
+highlighter: rouge
 kramdown:
   input: GFM
   syntax_highlighter: rouge
