--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Gerneral Jekyll config:
 name: Mads Mikkel
 permalink: /blog/:year/:month/:day/:title
-markdown: kramdown
+#markdown: kramdown
 highlighter: rouge
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+#kramdown:
+#  input: GFM
+#  syntax_highlighter: rouge
